linked pages together and added config file, sessions still not added

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <div class = "col-sm-0 col-md-3" id="right-margin">
 
-      <button id="sign-in-btn">Sign in</button>
-      <button id="sign-up-btn">Sign Up</button>
+      <button id="sign-in-btn" onclick="location.href='login.php';">Sign in</button>
+      <button id="sign-up-btn" onclick="location.href='register.php';">Sign Up</button>
 
     </div>
 
