Added layout of how posts would be submitted in submitPost, added loadPosts file NOTE: submitPosts.php uses mysql username: test, password:password. Make sure test@localhost has prvilieges before testing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <button id="submit-post-btn" onclick="showSubmitForm()">SUBMIT NEW POST</button>
 
-      <form id="submit-form" action="submitPost.php">
+      <form id="submit-form" action="submitPost.php" method="POST">
         <p><b>Message:</b></p>
         <textarea name="msg" rows="5" cols="40" maxlength="200"></textarea>
         <br>
