--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <!-- Font -->
 <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
 
+<!-- Angular -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js">
+</script>
+
 <script type="text/javascript">
 
   function showSubmitForm(){
@@ -26,7 +30,7 @@
 </head>
 
 <body>
-<div class = "container-fluid">
+<div ng-app= "" class = "container-fluid">
 
   <div class='jumbotron' id='site-header'>
     <h1 id='site-title'> <a href=#>NAME TBD </a></h1>
@@ -40,9 +44,11 @@
 
       <form id="submit-form" action="submit_post.php" method="post">
         <p><b>Message:</b></p>
-        <textarea name="msg" rows="5" cols="40" maxlength="200"></textarea>
+        <textarea name="msg" rows="5" cols="40" maxlength="200" minlength="1"
+          ng-model="sub_msg"></textarea>
         <br>
-        <button type="submit"> Submit Post </button>
+        <p>{{(sub_msg.length+0)+"/200"}}</p>
+        <button type="submit" class="btn btn-primary"> Submit Post </button>
         <hr>
       </form>
 
